--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,6 @@
   ],
     "functions": {
     "/upload.js": {
-      "maxDuration": 40 // This function can run for a maximum of 30 seconds
+      "maxDuration": 40
     }
 }
