--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "upload.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/.*", "dest": "/upload.js" }
-  ]
+    "rewrites":[
+        {"source":"/(.*)","destination":"/"}
+    ]
 }
